@startuml

package "com.studentspace.sscore.auth.login" {
    class LoginController {
        - userLoginService: LoginService
        - jwtService: JwtService
        + LoginController(jwtService: JwtService)
        + login(loginUserDto: LoginDto): String
    }

    class LoginDto {
        - username: String
        - password: String
        <<Getter>>
        <<Setter>>
    }

    class LoginService {
        - entityManager: EntityManager
        + getUserByUsernameAndPassword(username: String, password: String): User
    }
}

package "com.studentspace.sscore.user" {
    class User {
        - id: Long
        - username: String
        - name: String
        - surname: String
        - email: String
        - password: String
        <<Getter>>
        <<Setter>>
        + getAuthorities(): Collection<? extends GrantedAuthority>
        + getUsername(): String
        + isAccountNonExpired(): boolean
        + isAccountNonLocked(): boolean
        + isCredentialsNonExpired(): boolean
        + isEnabled(): boolean
    }
}

LoginController --> LoginService : uses
LoginController --> JwtService : creates
LoginController <- LoginDto : returns
LoginService --> User : uses
@enduml
